# ChangeLog for media-gfx/graphicsmagick
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  16 Jan 2009; Janne Rönkkö (jroo) <jroo@iki.fi>
  -graphicsmagick-1.3.3.ebuild, +graphicsmagick-1.3.4.ebuild:
  Version bumb to 1.3.4 for GraphicsMagick.

  10 Dec 2008; Janne Rönkkö (jroo) <jroo@iki.fi>
  -graphicsmagick-1.3.2.ebuild, +graphicsmagick-1.3.3.ebuild:
  Version bumb for GraphicsMagick.

  18 Nov 2008; Janne Rönkkö (jroo) <jroo@iki.fi>
  -graphicsmagick-1.3.ebuild, +graphicsmagick-1.3.1.ebuild:
  Version bumb for graphicsmagick.

  16 Nov 2008; Janne Rönkkö (jroo) <jroo@iki.fi>
  -graphicsmagick-1.2.5.ebuild, +graphicsmagick-1.3.ebuild:
  Version bump for graphicsmagick.

  23 Aug 2008; Thomas Beierlein (TomJBE) <tb@forth-ev.de> metadata.xml:
  Added local USE flag description wrt GLEP 56

  04 Aug 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
  graphicsmagick-1.2.5.ebuild:
  Whitespace

  03 Aug 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  graphicsmagick-1.2.5.ebuild:
  econf dies on its own

  03 Aug 2008; Janne Rönkkö (jroo) <jroo@iki.fi>
  graphicsmagick-1.2.5.ebuild:
  Corrected license for graphicsmagick-1.2.5.

  02 Aug 2008; Janne Rönkkö (jroo) <jroo@iki.fi>
  +graphicsmagick-1.2.5.ebuild, +metadata.xml:
  New Ebuild for bug 190372.
