@@ -1,4 +1,4 @@
 DIST GraphicsMagick-1.3.4.tar.bz2 6154862 RMD160 fac5d5b52bfb07116ccd7db673c55dc5aea29153 SHA1 837e2f227c4cd1ed180b80560bf071efbf35549e SHA256 1febcc4b37669eb1acb725e6548c3d81703ad1056c92967036b27e36801b655e
-EBUILD graphicsmagick-1.3.4.ebuild 2702 RMD160 a57b1ab7406f394ea0237d963f0cfbb06b627057 SHA1 8eac7a515b48ca4c230ee47627899cb49fe1775c SHA256 f94ec9c63a08dba83a0044058a615eb55e96588b6f5e8284675b09c5d7dfa363
-MISC ChangeLog 1319 RMD160 6bc36e9f7fb7171cf5bc3e2c47cb4da5f5ae20af SHA1 4a1c73e24f29b464569cdea1275b657827f11143 SHA256 6d9ad6ba6ef2da2501c642f20136ea09a373936070519464400acfbc40c3e6ce
+EBUILD graphicsmagick-1.3.4.ebuild 2466 RMD160 d59af22403d379c6a85f193138b95ab04dcaf426 SHA1 f691558d537bddfaf58130445f2823779dceb44d SHA256 30bcda38503c719b5807ba25643ef69e02e83b5e2b717d1d14484183089a99ad
+MISC ChangeLog 1445 RMD160 81957db1a3f58a1eb255f377cfc5dd3575acd255 SHA1 913c7c762744107e08b174e23f8fa38c749a3f78 SHA256 54c8a2285ac824d0e6beaffd559c0b4b51bcf4272819a5f9a670a8d81990d275
 MISC metadata.xml 501 RMD160 042c33630cb319f7dbcefa2c1eab7aff1c4e41b4 SHA1 dd5417367a3ce97a97381a667825caf394dd0055 SHA256 af9f0a524093f7cdfe548ac76f50849a3cdaf48c0176736e74523671805a8b0b
